Dark Mode Fixes

--- a/src/gwt/panmirror/src/editor/src/behaviors/insert_citation/insert_citation-panel.css
+++ b/src/gwt/panmirror/src/editor/src/behaviors/insert_citation/insert_citation-panel.css
@@ -27,7 +27,6 @@
 
 .pm-cite-panel-selected-cites {
   height: 50px;
-  width: 100%;
   margin-top: 10px;
   border: solid 1px;
   border-radius: 3px;  
